# promptfix

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  all-platforms.txt  chatgpt-mentor-prompt.txt  config.example.yaml  devto-article.md  grok-prompt.txt  hackernews-post.txt  linkedin-posts.txt  master-prompt-ai-content.txt  producthunt-launch.md  pyproject.toml  reddit-imadethis.txt  reddit-karmafree-posts.txt  reddit-post-opensource.txt  reddit-post-v2.txt  reddit-post.txt  reddit-posts-all.txt  reddit-replies.txt  trend_scraper.py  twitter-thread.txt
.github/workflows/: ci.yml  eval-report.yml
content-factory/: README.md  master-prompt.txt
evals/: agent-safety-checklist.yaml  english-agent.yaml  english-bugfixes.yaml  english-features.yaml  turkish-bugfixes.yaml  turkish-features.yaml  turkish-performance.yaml
extension/: background.js  chat.html  chat.js  content.js  options.html  options.js  popup.html  popup.js  test-page.html
extension/icons/: generate_icons.py
promptfix/: __init__.py  chat_engine.py  chat_session.py  cli.py  config.py  context.py  diff.py  guard.py  history.py  hotkeys.py  intent.py  presets.py  rewriter.py  scorer.py  service.py  snippets.py  templates.py
promptfix/eval/: __init__.py  cli.py  report.py  runner.py  scorer.py
promptfix/providers/: __init__.py  base.py  groq.py  ollama.py  openai_compatible.py
tests/: test_chat.py  test_config_validation.py  test_context.py  test_diff.py  test_extension_logic.py  test_guard.py  test_hotkey_flow.py  test_intent.py  test_providers.py  test_rewriter.py  test_scorer.py  test_service.py
tests/eval/: test_report.py  test_runner.py
