[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptfix"
version = "1.0.0"
description = "Coding-agent prompt rewriter — right-click to optimize"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["prompt", "ai", "coding", "rewriter", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "typer>=0.12.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "flask>=3.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]
tray = [
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
    "keyboard>=0.13.5",
]

[project.scripts]
promptfix = "promptfix.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["promptfix*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
