[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptfix"
version = "1.0.0"
description = "Coding-agent prompt rewriter — right-click to optimize"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["prompt", "ai", "coding", "rewriter", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "typer>=0.12.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "flask>=3.0.0",
    "flask-limiter>=3.5.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]
tray = [
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
    "keyboard>=0.13.5",
]

[project.scripts]
promptfix = "promptfix.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["promptfix*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B904",  # raise from err (typer.Exit patterns are intentional)
    "SIM117", # nested with statements (readability preference in tests)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "tests",
]
